New: Add some basic options to GL menu

--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -948,6 +948,9 @@
 					</trans-unit>
 				</group>
 				<group id="options">
+					<trans-unit id="resolution">
+						<source>Resolution:</source>
+					</trans-unit>
 					<trans-unit id="title">
 						<source>Options</source>
 					</trans-unit>
