New: Create plugin package type
https://github.com/leezer3/OpenBVE/pull/714

--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -606,6 +606,9 @@
 					<trans-unit id="type_other">
 						<source>Other</source>
 					</trans-unit>
+					<trans-unit id="type_plugin">
+						<source>Plugin</source>
+					</trans-unit>
 					<trans-unit id="type_select">
 						<source>Please select the package type:</source>
 					</trans-unit>
