--- a/assets/Languages/nb_NO.xlf
+++ b/assets/Languages/nb_NO.xlf
@@ -2323,6 +2323,14 @@
 				    <source>Activates or deactivates the constant speed device</source>
 				    <target>Aktiverer eller deaktiverer kruskontroll</target>
 				  </trans-unit>
+				  <trans-unit id="play_micsounds">
+						<source>Activates or deactivates the system microphone soundsource</source>
+						<target>Activates or deactivates the system microphone soundsource</target>
+					</trans-unit>
+					<trans-unit id="sanders">
+						<source>Activates or deactivates the sanders</source>
+						<target>Activates or deactivates the sanders</target>
+					</trans-unit>
 				  <trans-unit id="security_power">
 				    <source>Activates or deactivates the security system on some trains</source>
 				    <target>Aktiverer eller deaktiverer sikkerhetssystemet på noen tog</target>
