--- a/assets/Languages/de-DE.xlf
+++ b/assets/Languages/de-DE.xlf
@@ -64,6 +64,10 @@
 						<source>You already have the latest version.</source>
 						<target>Das Programm ist bereits auf dem neuesten Stand.</target>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+						<target>The most recent nightly build from [date] is available for download.</target>
+					</trans-unit>
 					<trans-unit id="updates_new">
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 						<target>Die neue Programmversion [version] ([date]) ist auf der offiziellen Homepage verfügbar.</target>
