--- a/assets/Languages/en-US.xlf
+++ b/assets/Languages/en-US.xlf
@@ -50,6 +50,9 @@
 					<trans-unit id="updates_old">
 						<source>You already have the latest version.</source>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+					</trans-unit>
 					<trans-unit id="updates_new">
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 					</trans-unit>
