--- a/assets/Languages/es-ES.xlf
+++ b/assets/Languages/es-ES.xlf
@@ -68,6 +68,10 @@
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 						<target>La nueva versión [version] ([date]) está disponible para descargar en la página oficial.</target>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+						<target>The most recent nightly build from [date] is available for download.</target>
+					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
 						<target>Cerrar</target>
