--- a/assets/Languages/fr-FR.xlf
+++ b/assets/Languages/fr-FR.xlf
@@ -67,6 +67,10 @@
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 						<target>Une nouvelle version [version] ([date]) est téléchargeable depuis le Site Web officiel.</target>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+						<target>The most recent nightly build from [date] is available for download.</target>
+					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
 						<target>Fermer</target>
