--- a/assets/Languages/id-ID.xlf
+++ b/assets/Languages/id-ID.xlf
@@ -67,6 +67,10 @@
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 						<target>Versi baru telah tersedia. Silakan download di web resmi: [version] ([date])</target>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+						<target>The most recent nightly build from [date] is available for download.</target>
+					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
 						<target>Keluar</target>
