--- a/assets/Languages/it-IT.xlf
+++ b/assets/Languages/it-IT.xlf
@@ -68,6 +68,10 @@
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 						<target>La nuova versione [version] ([date]) è disponibile sul sito ufficiale.</target>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+						<target>The most recent nightly build from [date] is available for download.</target>
+					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
 						<target>Chiudi</target>
