--- a/assets/Languages/ru-RU.xlf
+++ b/assets/Languages/ru-RU.xlf
@@ -67,6 +67,10 @@
 						<source>The new version [version] ([date]) is available for download on the Official Homepage.</source>
 						<target>Новая версия [version] ([date]) доступна для загрузки на официальном сайте.</target>
 					</trans-unit>
+					<trans-unit id="updates_daily">
+						<source>The most recent nightly build from [date] is available for download.</source>
+						<target>The most recent nightly build from [date] is available for download.</target>
+					</trans-unit>
 					<trans-unit id="close">
 						<source>Close</source>
 						<target>Закрыть</target>
