Make untranslatable string translatable on main UI

--- a/assets/Languages/ca-ES.xlf
+++ b/assets/Languages/ca-ES.xlf
@@ -1462,6 +1462,10 @@
 						<source>Show error messages</source>
 						<target>Mostra els missatges d'error</target>
 					</trans-unit>
+					<trans-unit id="verbosity_accessibilityaids">
+						<source>Accessibility Aids</source>
+						<target>Accessibility Aids</target>
+					</trans-unit>
 					<trans-unit id="advanced">
 						<source>Advanced Options</source>
 						<target>Opcions avançades</target>
@@ -1481,6 +1485,10 @@
 					<trans-unit id="advanced_unload_textures">
 						<source>Unload unused textures</source>
 						<target>Esborra les textures inactives</target>
+					</trans-unit>
+					<trans-unit id="advanced_cursor">
+						<source>Cursor</source>
+						<target>Cursor</target>
 					</trans-unit>
 					<trans-unit id="other">
 						<source>Other</source>
@@ -1562,6 +1570,10 @@
 						<source>Large</source>
 						<target>Gran</target>
 					</trans-unit>
+					<trans-unit id="font">
+						<source>Font:</source>
+						<target>Font:</target>
+					</trans-unit>
 					<trans-unit id="transparencyfix">
 						<source>Attempt to fix transparency issues in older content.</source>
 						<target>Intenta corregir els errors de transparència en contingut antic</target>
@@ -1621,6 +1633,10 @@
 					<trans-unit id="panel2_extended">
 						<source>Enable Panel2 Extended Mode</source>
 						<target>Habilita el mode ampliat de Panel2</target>
+					</trans-unit>
+					<trans-unit id="object_parser">
+						<source>Object Parser</source>
+						<target>Object Parser</target>
 					</trans-unit>
 					<trans-unit id="xobject_parser">
 						<source>X Object Parser</source>
