--- a/assets/Languages/nb_NO.xlf
+++ b/assets/Languages/nb_NO.xlf
@@ -1453,6 +1453,10 @@
 					  <source>Show error messages</source>
 					  <target>Vis feilmeldinger</target>
 					</trans-unit>
+					<trans-unit id="verbosity_accessibilityaids">
+						<source>Accessibility Aids</source>
+						<target>Accessibility Aids</target>
+					</trans-unit>
 					<trans-unit id="advanced">
 					  <source>Advanced Options</source>
 					  <target>Avanserte valg</target>
@@ -1472,6 +1476,10 @@
 					<trans-unit id="advanced_unload_textures">
 					  <source>Unload unused textures</source>
 					  <target>Last av ubrukte teksturer</target>
+					</trans-unit>
+					<trans-unit id="advanced_cursor">
+						<source>Cursor</source>
+						<target>Cursor</target>
 					</trans-unit>
 					<trans-unit id="other">
 					  <source>Other</source>
@@ -1553,6 +1561,10 @@
 					  <source>Large</source>
 					  <target>Stor</target>
 					</trans-unit>
+					<trans-unit id="font">
+						<source>Font:</source>
+						<target>Font:</target>
+					</trans-unit>
 					<trans-unit id="transparencyfix">
 					  <source>Attempt to fix transparency issues in older content.</source>
 					  <target>Prøver å fiske feil med gjennomsiktighet for gammelt innhold.</target>
@@ -1612,6 +1624,9 @@
 					<trans-unit id="panel2_extended">
 					  <source>Enable Panel2 Extended Mode</source>
 					  <target>Slå på panel2 utvidet modus</target>
+					</trans-unit>
+					<trans-unit id="object_parser">
+						<source>Object Parser</source>
 					</trans-unit>
 					<trans-unit id="xobject_parser">
 					  <source>X Object Parser</source>
