--- a/assets/Languages/id-ID.xlf
+++ b/assets/Languages/id-ID.xlf
@@ -1177,7 +1177,7 @@
 						<target>Mulai</target>
 					</trans-unit>
 					<trans-unit id="notdetected">
-						<source>No RailDriver conrollers detected.</source>
+						<source>No RailDriver controllers detected.</source>
 						<target>Perangkat RailDriver tidak ditemukan.</target>
 					</trans-unit>
 					<trans-unit id="config_error">
