--- a/assets/Languages/ms_MY.xlf
+++ b/assets/Languages/ms_MY.xlf
@@ -1177,7 +1177,7 @@
 						<target>Lancar</target>
 					</trans-unit>
 					<trans-unit id="notdetected">
-						<source>No RailDriver conrollers detected.</source>
+						<source>No RailDriver controllers detected.</source>
 						<target>Tiada RailDriver Controller ditemukan.</target>
 					</trans-unit>
 					<trans-unit id="config_error">
