--- a/assets/Languages/ms_MY.xlf
+++ b/assets/Languages/ms_MY.xlf
@@ -667,6 +667,10 @@
 						<source>Remove</source>
 						<target>Keluarkan</target>
 					</trans-unit>
+					<trans-unit id="creation_dependancies_skip_if_none">
+						<source>If your package does not rely on other dependencies, you may continue by clicking the "Create" button.</source>
+						<target>If your package does not rely on other dependencies, you may continue by clicking the "Create" button.</target>
+					</trans-unit>
 					<trans-unit id="creation_dependancies_nextstep">
 						<source>Package details and dependancies may be assigned in the following steps.</source>
 						<target>Butiran pakej dan tanggungan mungkin ditetapkan dalam langkah berikut.</target>
