--- a/source/OpenBVE/UserInterface/formAbout.resx
+++ b/source/OpenBVE/UserInterface/formAbout.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="textBoxMain.Text" xml:space="preserve">
-    <value>openBVE is a free and open-source multi-platform train simulator, featuring support for 2D and 3D cabs and scenery.
+    <value>OpenBVE is a free and open-source multi-platform train simulator, featuring support for 2D and 3D cabs and scenery.
 
 This program was initially developed by Michelle, and is released into the public domain where legally possible.</value>
   </data>
