--- a/assets/Languages/ca-ES.xlf
+++ b/assets/Languages/ca-ES.xlf
@@ -987,6 +987,9 @@
 						<source>The package database XML was invalid, and has been re-created.</source>
 						<target>El format XML de la base de dades de paquets no era vàlid i s'ha recreat.</target>
 					</trans-unit>
+					<trans-unit id="error_busy_thread">
+						<source>The package worker thread is currently busy. Please wait a moment and try again.</source>
+					</trans-unit>
 				</group>
 				<group id="controls">
 					<trans-unit id="title">
