--- a/assets/Languages/zh-CN.xlf
+++ b/assets/Languages/zh-CN.xlf
@@ -991,6 +991,9 @@
 						<source>The package database XML was invalid, and has been re-created.</source>
 						<target>您计算机上目前存储着的扩展包数据库XML格式无效，已被重新创建。</target>
 					</trans-unit>
+					<trans-unit id="error_busy_thread">
+						<source>The package worker thread is currently busy. Please wait a moment and try again.</source>
+					</trans-unit>
 				</group>
 				<group id="controls">
 					<trans-unit id="title">
